Trying to fix issues with horizontal scroll #22

--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@ p {
 .section-title {
   color: var(--colorOrange);
   text-transform: uppercase;
-  font-size: 1.6rem;
+  font-size: 2.6rem;
   font-weight: 500;
 }
 
@@ -135,6 +135,7 @@ p {
 /* Paul Renner */
 
 .paul_renner {
+  overflow-x: hidden;
   background-color: var(--colorBlack);
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
@@ -143,11 +144,18 @@ p {
   width: 580%;
 }
 
+.paul_renner-intro {
+  width: 100vw;
+}
+
 .paul_renner-title {
-  margin: 8rem;
+  margin: 2rem;
+  width: 100vw;
 }
 
 .paul_renner p {
+  font-size: 18px;
+  line-height: 1.8rem;
   color: white;
 }
 
@@ -156,16 +164,16 @@ p {
 }
 
 .paul_story-text {
-  margin: 8rem 15rem;
-  width: 40rem;
+  margin: 4rem 5rem;
+  width: 20rem;
 }
 
 .paul_story-image-photo {
-  width: 40rem;
+  width: 20rem;
 }
 
 .paul_story-image-text {
-  font-size: 18px;
+  font-size: 14px;
   text-transform: uppercase;
   letter-spacing: .8px;
   text-align: right;
@@ -299,5 +307,20 @@ p {
 
   .character_item-image {
     max-width: 15rem;
+  }
+
+  /* Paul Renner */
+
+  .paul_renner-title {
+    margin: 8rem;
+  }
+
+  .paul_story-text {
+    margin: 8rem 15rem;
+    width: 40rem;
+  }
+
+  .paul_story-image-photo {
+    width: 40rem;
   }
 }
